# Final_work_module_3

./: .env.example  README.md  config.py  custom_loger.py  main.py  pyproject.toml  user_settings.json
src/: decorator.py  file_handler.py  reports.py  requests_api.py  services.py  views.py
tests/: conftest.py  test_decorator.py  test_views.py
