[project]
name = "final-work-module-3"
version = "0.1.0"
description = ""
authors = [
    {name = "Yurii",email = "yurii.1986.e@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "chardet (>=5.2.0,<6.0.0)",
    "requests (>=2.32.3,<3.0.0)",
    "python-dotenv (>=1.0.1,<2.0.0)",
    "pandas (>=2.2.3,<3.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.lint.dependencies]
flake8 = "^7.1.1"
mypy = "^1.14.1"
black = "^24.10.0"
isort = "^5.13.2"


[tool.poetry.group.dev.dependencies]
pytest = "^8.3.4"
pytest-cov = "^6.0.0"

[tool.mypy]
disallow_untyped_defs = true
warn_return_any = true
exclude = 'venv'

[tool.black]
line-length = 119
exclude = ".git"

[tool.isort]
line_length = 119
multi_line_output = 3
